--- a/index.html
+++ b/index.html
@@ -51,15 +51,69 @@
         <div class="last">
             <h2>Frequently Asked Question?</h2>
             <div class="ques">
-                <div>What is Netflix?</div>
-                <div>How much does Netflix cost?</div>
-                <div>Where can I watch?</div>
-                <div>How do I cancel?</div>
-                <div>What can I watch on Netflix?</div>
-                <div>Is Netflix good for kids?</div>
-                <span>Copyright &copy; Terms and Condition Applied</span>
+                <span>What is Netflix?
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" role="img" viewBox="0 0 36 36" width="36"
+                        height="36" data-icon="PlusLarge" aria-hidden="true"
+                        class="accordion-heading_iconStyles__199uojx2 accordion-heading_iconStyles_isOpen_false__199uojx4 default-ltr-cache-1xj76yz e164gv2o4">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                        fill="currentColor"></path>
+                    </svg>
+                </span>
             </div>
+            <div class="ques">
+                <span>How much does Netflix cost?
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" role="img" viewBox="0 0 36 36" width="36"
+                        height="36" data-icon="PlusLarge" aria-hidden="true"
+                        class="accordion-heading_iconStyles__199uojx2 accordion-heading_iconStyles_isOpen_false__199uojx4 default-ltr-cache-1xj76yz e164gv2o4">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </span>
+            </div>
+            <div class="ques">
+                <span>Where can I watch?
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" role="img" viewBox="0 0 36 36" width="36"
+                        height="36" data-icon="PlusLarge" aria-hidden="true"
+                        class="accordion-heading_iconStyles__199uojx2 accordion-heading_iconStyles_isOpen_false__199uojx4 default-ltr-cache-1xj76yz e164gv2o4">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </span>
+            </div>
+            <div class="ques">
+                <span>How do I cancel?
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" role="img" viewBox="0 0 36 36" width="36"
+                        height="36" data-icon="PlusLarge" aria-hidden="true"
+                        class="accordion-heading_iconStyles__199uojx2 accordion-heading_iconStyles_isOpen_false__199uojx4 default-ltr-cache-1xj76yz e164gv2o4">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </span>
+            </div>
+            <div class="ques">
+                <span>What can I watch on Netflix?
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" role="img" viewBox="0 0 36 36" width="36"
+                        height="36" data-icon="PlusLarge" aria-hidden="true"
+                        class="accordion-heading_iconStyles__199uojx2 accordion-heading_iconStyles_isOpen_false__199uojx4 default-ltr-cache-1xj76yz e164gv2o4">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </span>
+            </div>
+            <div class="ques">
+                <span>Is Netflix good for kids?
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" role="img" viewBox="0 0 36 36" width="36"
+                        height="36" data-icon="PlusLarge" aria-hidden="true"
+                        class="accordion-heading_iconStyles__199uojx2 accordion-heading_iconStyles_isOpen_false__199uojx4 default-ltr-cache-1xj76yz e164gv2o4">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </span>
+            </div>
+            <h5>Copyright &copy; Terms and Condition Applied</h5>
         </div>
     </div>
+    </div>
 </body>
+
 </html>
